# Agentic-Code-Reviewer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  self-review.yml
eval_data/cases/: bug_bare_except.json  bug_float_index.json  bug_loop_mutation.json  bug_missing_return.json  bug_mutable_default_arg.json  bug_none_dereference.json  bug_off_by_one.json  bug_wrong_comparison.json  bug_wrong_default.json  perf_blocking_async.json  perf_duplicate_query.json  perf_n_plus_one.json  perf_regex_in_loop.json  perf_string_concat_loop.json  security_command_injection.json  security_hardcoded_secret.json  security_insecure_random.json  security_missing_auth.json  security_open_redirect.json  security_path_traversal.json  security_sql_injection.json  security_xss.json  style_deep_nesting.json  style_magic_number.json  style_missing_type_hints.json  style_unused_variable.json
src/: cli.py  config.py  logging.py
src/agents/: aggregate.py  annotate.py  context.py  orchestrator.py  specialists.py  tools.py
src/api/: app.py  dashboard.py
src/db/: migrate.py  models.py  schema.sql  store.py
src/eval/: dataset.py  metrics.py  runner.py
src/github/: client.py  diff_parser.py  review_poster.py  (+1 more)
tasks/: lessons.md  todo.md
tests/: test_aggregate.py  test_annotate.py  test_api.py  test_config.py  test_context.py  test_dashboard.py  test_db.py  test_diff_parser.py  test_eval_runner.py  test_github_client.py  test_metrics.py  test_ollama_client.py  test_orchestrator.py  test_review_poster.py  test_specialists.py  test_tools.py  test_webhook.py
(+4 files in other folders)
