[project]
name = "agentic-reviewer"
version = "0.1.0"
description = "AI agent that reviews GitHub PRs — finds bugs, security, and performance issues."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.5",
    "unidiff>=0.7.5",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "requests>=2.32",
    "ollama>=0.6.2",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
]

[project.scripts]
arev = "src.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
